<resources>
    <string name="app_name">TZF Viewer</string><string name="mode_viewer">Просмотр</string>
    <string name="mode_stitching">Сшивка</string><string name="open_scan">Открыть скан</string>
    <string name="open_reference">Опорный скан</string><string name="open_movable">Добавить скан</string>
    <string name="projection">Проекция</string><string name="measure">Измерить</string>
    <string name="fit_view">Показать всё</string><string name="position">Положение</string>
    <string name="rotation">Вращение</string><string name="display">Отображение</string>
    <string name="reference_visible">Опорный</string><string name="movable_visible">Перемещаемый</string>
    <string name="reset_transform">Сбросить</string><string name="save_transform">Сохранить</string>
    <string name="restore_transform">Восстановить</string>
    <string name="empty_status">Откройте TZF, чтобы начать просмотр</string>
    <string name="translation_step">Шаг перемещения</string><string name="rotation_step">Шаг вращения</string>
    <string name="orbit_mode_off">Включить вращение модели одним пальцем</string>
    <string name="orbit_mode_on">Выключить вращение; двигать вид одним пальцем</string>
</resources>
